Fix spacing between images

--- a/src/app/components/images-section/images-section.component.scss
+++ b/src/app/components/images-section/images-section.component.scss
@@ -6,6 +6,8 @@
   height: fit-content;
   width: 100%;
   margin-top: 5px;
+
+  justify-content: flex-start;
 }
 
 .image-scroller img {
